--- a/laythongtinkhachhang.html
+++ b/laythongtinkhachhang.html
@@ -40,7 +40,7 @@
     <input name="time" type="radio" >Weekly <br>
     <input name="time" type="radio" >Monthly <br>
     <p>What would you pay for the new product?</p>
-    <table style="border: black" border="1px">
+    <table>
         <tr>
             <td>$</td>
             <td><input style="width: 40px" type="text"></td>
@@ -54,10 +54,43 @@
             <td></td>
             <td style="font-size: 15px">Cents</td>
         </tr>
-        <p>What features would yoi like to see in the new product</p>
 
     </table>
-    
+        <p>What features would you like to see in the new product</p>
+    <textarea rows="7" cols="100"></textarea>
+    <p>Plesse rate your level of agreement with the following statements.</p>
+    <table style="border-color: black; border-collapse: collapse" border="1">
+        <tr bgcolor="#6495ed" style="text-align: center">
+            <td></td>
+            <td>Trongly</td>
+            <td>Disagree</td>
+            <td>Agree</td>
+            <td>Strongly Agree</td>
+        </tr>
+        <tr>
+            <td> Our product are priced fairly</td>
+            <td style="text-align: center"><input name="suc khoe" id="1" value="1" type="radio"><br>1</td>
+            <td style="text-align: center"><input name="suc khoe" id="2" value="2" type="radio"><br>2</td>
+            <td style="text-align: center"><input name="suc khoe" id="3" value="3" type="radio"><br>3</td>
+            <td style="text-align: center"><input name="suc khoe" id="4" value="4" type="radio"><br>4</td>
+        </tr>
+        <tr bgcolor="#6495ed">
+            <td>Our products are high quality</td>
+            <td style="text-align: center"><input name="danh gia" id="5" value="1" type="radio"><br>1</td>
+            <td style="text-align: center"><input name="danh gia" id="6" value="2" type="radio"><br>2</td>
+            <td style="text-align: center"><input name="danh gia" id="7" value="3" type="radio"><br>3</td>
+            <td style="text-align: center"><input name="danh gia" id="8" value="4" type="radio"><br>4</td>
+        </tr>
+        <tr>
+            <td>You would recommend uor product to a friend or <br>
+            coworker.</td>
+            <td style="text-align: center"><input name="danh gia 1" id="9" value="1" type="radio"><br>1</td>
+            <td style="text-align: center"><input name="danh gia 1" id="10" value="2" type="radio"><br>2</td>
+            <td style="text-align: center"><input name="danh gia 1" id="11" value="3" type="radio"><br>3</td>
+            <td style="text-align: center"><input name="danh gia 1" id="12" value="4" type="radio"><br>4</td>
+        </tr>
+
+    </table>
 
 
 </form>
